Fix step nav print styles
- were broken in work to remove groups, now fixed

--- a/app/assets/stylesheets/govuk_publishing_components/components/print/_step-by-step-nav.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/print/_step-by-step-nav.scss
@@ -39,11 +39,11 @@ $stroke-width: 3px;
   }
 }
 
-.gem-c-step-nav__group {
+.gem-c-step-nav__step {
   position: relative;
 }
 
-.gem-c-step-nav__groups {
+.gem-c-step-nav__steps {
   padding: 0;
   list-style: none;
 }
